# rviz_plugin_tutorial

./: .clang-format  .pre-commit-config.yaml  README.md
rviz_plugin_tutorial/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
rviz_plugin_tutorial/include/rviz_plugin_tutorial/: point_display.hpp
rviz_plugin_tutorial/src/: point_display.cpp
rviz_plugin_tutorial_msgs/: CMakeLists.txt  package.xml
rviz_plugin_tutorial_msgs/msg/: Point2D.msg
